--- a/music/src/main/res/layout/activity_main.xml
+++ b/music/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/default_bg"
     android:orientation="vertical"
     tools:context="com.zyt.tx.myapplication.MainActivity">
 
@@ -30,7 +31,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:background="@drawable/icon_list_bg"
-            android:text="列表" />
+            android:text="列表"
+            android:visibility="gone" />
     </RelativeLayout>
 
 
@@ -70,14 +72,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:src="@drawable/music_play" />
+                android:src="@drawable/play"
+                android:visibility="invisible" />
 
             <ImageButton
                 android:id="@+id/bntPause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:src="@drawable/music_pause" />
+                android:src="@drawable/play_pause" />
         </FrameLayout>
 
         <ImageButton
@@ -88,7 +91,7 @@
             android:layout_marginRight="30dp"
             android:layout_toLeftOf="@+id/fl_play_pause"
             android:background="@null"
-            android:src="@drawable/music_prev" />
+            android:src="@drawable/play_previous" />
 
         <ImageButton
             android:id="@+id/btnNext"
@@ -98,7 +101,6 @@
             android:layout_marginLeft="30dp"
             android:layout_toRightOf="@+id/fl_play_pause"
             android:background="@null"
-            android:src="@drawable/music_next" />
+            android:src="@drawable/play_next" />
     </RelativeLayout>
-
 </RelativeLayout>
