--- a/music/src/main/res/layout/activity_main.xml
+++ b/music/src/main/res/layout/activity_main.xml
@@ -59,7 +59,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+
+        <com.zyt.tx.myapplication.ModelImageView
+            android:id="@+id/modelImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp" />
+
 
         <FrameLayout
             android:id="@+id/fl_play_pause"
