--- a/music/src/main/res/layout/activity_main.xml
+++ b/music/src/main/res/layout/activity_main.xml
@@ -9,33 +9,6 @@
     tools:context="com.zyt.tx.myapplication.MainActivity">
 
 
-    <RelativeLayout
-        android:id="@+id/rl_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="3dp">
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ssss"
-            android:textSize="17sp" />
-
-        <Button
-            android:id="@+id/btnList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/icon_list_bg"
-            android:text="列表"
-            android:visibility="gone" />
-    </RelativeLayout>
-
-
     <ImageView
         android:id="@+id/cover"
         android:layout_width="wrap_content"
@@ -122,5 +95,43 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="30dp"
             android:src="@drawable/play_all" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:padding="3dp">
+
+
+        <ImageView
+            android:id="@+id/ivExit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/left_arrow" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="ssss"
+            android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/btnList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/icon_list_bg"
+            android:text="列表"
+            android:visibility="gone" />
     </RelativeLayout>
 </RelativeLayout>
