--- a/music/src/main/res/layout/activity_main.xml
+++ b/music/src/main/res/layout/activity_main.xml
@@ -9,14 +9,31 @@
     tools:context="com.zyt.tx.myapplication.MainActivity">
 
 
-    <ImageView
-        android:id="@+id/cover"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/default_cover" />
+        android:layout_marginTop="30dp">
+
+        <ImageView
+            android:id="@+id/cover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/default_cover"
+            android:visibility="gone" />
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+        <TextView
+            android:id="@+id/tvLyric"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        </ScrollView>
+    </FrameLayout>
 
 
     <com.zyt.tx.myapplication.MyProgressBar
